--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <div id="timer">
                     <div id="current">Let's go!</div>
                     <span class="hourglass"></span>
+                    <span class="hourglasses"></span>
                     <div id="timerCount">1:00</div>
                 </div>
                 <div class="reset">
