main.js->finish animate

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                 <div id="timer">
                     <div id="current">Let's go!</div>
-                    <span class="hourglass"></span>
+                    <span id="hourglass"></span>
                     <span class="hourglasses"></span>
                     <div id="timerCount">1:00</div>
                 </div>
